--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node ./dist/index.js",
         "dev": "nodemon --exec env-cmd -f ./config/dev.env npx babel-node src/index.js",
         "build": "babel src -d dist"
+    },
+    "jest": {
+        "testEnvironment": "node"
     },
     "keywords": [],
     "author": "",
